--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/banco
-spring.datasource.username=admin
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/banco
+spring.datasource.username=root
+spring.datasource.password=Valencia9562??
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto =update
+
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3307/banco
+# spring.datasource.username=admin
+# spring.datasource.password=1234
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+# spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto =update
 
 # spring.datasource.url=jdbc:mysql://uhrcja8gdyt99akt:zUYalrZHMAG08E9lrFc4@b5sgogoij9blju0wicti-mysql.services.clever-cloud.com:3306/b5sgogoij9blju0wicti
 # spring.datasource.username=uhrcja8gdyt99akt
