Working on home

--- a/openbank/src/main/resources/application.properties
+++ b/openbank/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/bank
-spring.datasource.username=admin
-spring.datasource.password=1234
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3307/bank
+# spring.datasource.username=admin
+# spring.datasource.password=1234
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+# spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto =update
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bank
+spring.datasource.username=root
+spring.datasource.password=Valencia9562??
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
