--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-# spring.datasource.url=jdbc:mysql://127.0.0.1:3307/bank
-# spring.datasource.username=root
-# spring.datasource.password=
-# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-# spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-# spring.jpa.generate-ddl=true
-# spring.jpa.hibernate.ddl-auto =update
-
-# spring.devtools.restart.enabled = false
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bank
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/bank
 spring.datasource.username=root
-spring.datasource.password=Valencia9562??
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto =update
+
+# spring.devtools.restart.enabled = false
+
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bank
+# spring.datasource.username=root
+# spring.datasource.password=Valencia9562??
+# spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+# spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto =update
